# python_package_color

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-publish.yml
color_print/: __init__.py  core.py
tests/: test_core.py
